--- a/dashboard.html
+++ b/dashboard.html
@@ -49,96 +49,19 @@
             </div>
             <div class="user-nav">
                 <ul>
-                    <li class="dropdown messages">
-                        <span class="badge badge-danager animated bounceIn" id="new-messages">5</span>
-                        <button type="button" class="btn btn-default dropdown-toggle options" id="toggle-mail" data-toggle="dropdown">
-                            <i class="fa fa-envelope"></i>
-                        </button>
-                        <ul class="dropdown-menu alert animated fadeInDown">
-                            <li>
-                                <h1>You have <strong>5</strong> new messages</h1>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div class="profile-photo">
-                                        <img src="assets/img/avatar.gif" alt="" class="img-circle">
-                                    </div>
-                                    <div class="message-info">
-                                        <span class="sender">James Bagian</span>
-                                        <span class="time">30 mins</span>
-                                        <div class="message-content">Lorem ipsum dolor sit amet, elit rutrum felis sed erat augue fusce...</div>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="#">
-                                    <div class="profile-photo">
-                                        <img src="assets/img/avatar1.gif" alt="" class="img-circle">
-                                    </div>
-                                    <div class="message-info">
-                                        <span class="sender">Jeffrey Ashby</span>
-                                        <span class="time">2 hour</span>
-                                        <div class="message-content">hendrerit pellentesque, iure tincidunt, faucibus vitae dolor aliquam...</div>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="#">
-                                    <div class="profile-photo">
-                                        <img src="assets/img/avatar2.gif" alt="" class="img-circle">
-                                    </div>
-                                    <div class="message-info">
-                                        <span class="sender">John Douey</span>
-                                        <span class="time">3 hours</span>
-                                        <div class="message-content">Penatibus suspendisse sit pellentesque eu accumsan condimentum nec...</div>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="#">
-                                    <div class="profile-photo">
-                                        <img src="assets/img/avatar3.gif" alt="" class="img-circle">
-                                    </div>
-                                    <div class="message-info">
-                                        <span class="sender">Ellen Baker</span>
-                                        <span class="time">7 hours</span>
-                                        <div class="message-content">Sem dapibus in, orci bibendum faucibus tellus, justo arcu...</div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div class="profile-photo">
-                                        <img src="assets/img/avatar4.gif" alt="" class="img-circle">
-                                    </div>
-                                    <div class="message-info">
-                                        <span class="sender">Ivan Bella</span>
-                                        <span class="time">6 hours</span>
-                                        <div class="message-content">Curabitur metus faucibus sapien elit, ante molestie sapien...</div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li><a href="#">Check all messages <i class="fa fa-angle-right"></i></a>
-                            </li>
-                        </ul>
-
-                    </li>
                     <li class="profile-photo">
-                        <img src="assets/img/avatar.png" alt="" class="img-circle">
+                        <img src="img/melissa.jpg" width="30px" height="30px" alt="" class="img-circle">
                     </li>
                     <li class="dropdown settings">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                      Melissa Thai <i class="fa fa-angle-down"></i>
+                      Melissa <i class="fa fa-angle-down"></i>
                     </a>
                         <ul class="dropdown-menu animated fadeInDown">
                             <li>
                                 <a href="#"><i class="fa fa-power-off"></i> Logout</a>
                             </li>
                         </ul>
-                    </li>gith
+                    </li>
                 </ul>
             </div>
         </header>
