--- a/team-management.html
+++ b/team-management.html
@@ -85,13 +85,13 @@
                     </li>
                     <li class="sub-menu">
                         <!-- TODO: change icon -->
-                        <a href=friends.html"><i class="fa fa-male"></i><span>Friends</span></a>
+                        <a href="javascript:void(0);"><i class="fa fa-male"></i><span>Friends</span></a>
                     </li>
                     <li class="sub-menu">
-                        <a href="team-management.html"><i class="fa fa-comments-o"></i><span>Team Management</span></a>
+                        <a href="javascript:void(0);"><i class="fa fa-comments-o"></i><span>Team Management</span></a>
                     </li>
                     <li class="sub-menu">
-                        <a href="browse-hackathons.html"><i class="fa fa fa-code"></i><span>Browse Hackathons</span></a>
+                        <a href="javascript:void(0);"><i class="fa fa fa-code"></i><span>Browse Hackathons</span></a>
                     </li>
                 </ul>
             </div>
