extended search box, login button links to dashboard and logout button leads to login

--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
             <p>
                 All you need is a Facebook account!
             </p>
-            <form>
+            <form action="dashboard.html">
                 <ul>
                     <li>
                         <button type="submit" style="border: 0; background: transparent">
