--- a/dashboard.html
+++ b/dashboard.html
@@ -42,39 +42,43 @@
                 <a href="dashboard.html" class="logo"><img id="logo" src="img/hackathon_helper_logo.png"></a>
             </div>
             <!--logo end-->
-            <!-- toggle navigation start -->
-            <div class="toggle-navigation toggle-left">
-                <button type="button" class="btn btn-default" id="toggle-left" data-toggle="tooltip" data-placement="right" title="Toggle Navigation">
-                    <i class="fa fa-bars"></i>
-                </button>
+            <!-- top bar start -->
+            <div id="top-bar">
+                <!-- toggle navigation start -->
+                <div class="toggle-navigation toggle-left">
+                    <button type="button" class="btn btn-default" id="toggle-left" data-toggle="tooltip" data-placement="right" title="Toggle Navigation">
+                        <i class="fa fa-bars"></i>
+                    </button>
+                </div>
+                <!-- toggle navigation start -->
+                <!-- search bar start -->
+                <!-- TODO: add typeahad.js? -->
+                <div id="searchbox">
+                    <input id="search-text" type="text" placeholder="Search for fellow hackers...">
+                    <button id="search-button" type="submit"><span>Search</span></button>
+                </div>
+                <!-- search bar end -->
+                <!-- user nav start -->
+                <div class="user-nav">
+                    <ul>
+                        <li class="profile-photo">
+                            <img src="img/melissa.jpg" width="30px" height="30px" alt="" class="img-circle">
+                        </li>
+                        <li class="dropdown settings">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                Melissa <i class="fa fa-angle-down"></i>
+                            </a>
+                            <ul class="dropdown-menu animated fadeInDown">
+                                <li>
+                                    <a href="login.html"><i class="fa fa-power-off"></i> Logout</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <!-- user nav end -->
             </div>
-            <!-- toggle navigation start -->
-            <!-- search bar start -->
-            <!-- TODO: add typeahad.js? -->
-            <div id="searchbox">
-                <input id="search-text" type="text" placeholder="Search for fellow hackers...">
-                <button id="search-button" type="submit"><span>Search</span></button>
-            </div>
-            <!-- search bar end -->
-            <!-- user nav start -->
-            <div class="user-nav">
-                <ul>
-                    <li class="profile-photo">
-                        <img src="img/melissa.jpg" width="30px" height="30px" alt="" class="img-circle">
-                    </li>
-                    <li class="dropdown settings">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                      Melissa <i class="fa fa-angle-down"></i>
-                    </a>
-                        <ul class="dropdown-menu animated fadeInDown">
-                            <li>
-                                <a href="#"><i class="fa fa-power-off"></i> Logout</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <!-- user nav end -->
+            <!-- top bar end -->
         </header>
         <!--sidebar left start-->
         <aside class="sidebar">
